# OpenDoas-rs

./: .containerignore  .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  PRODUCTION-READINESS.md  README.md  build.rs
.github/workflows/: ci.yml
conformance/: .gitignore  EDGE-CASE-BACKLOG.md  MISSING-CASES.md  README.md
conformance/fixtures/files/: show_env.py  show_fds.py  syslog_capture.py
conformance/fixtures/pam/: doas-deny  doas-permit
conformance/fixtures/users/: base-users.sh  basic-users.sh
docs/: GAP-REGISTER.md  INSTALL.md  INVESTIGATION-PHASES.md  OPENDOAS-REPLACEMENT-DELTA.md  OPENDOAS-REPLACEMENT-FIXES.md  OPERATIONS.md  RELEASE-CHECKLIST.md  SECURITY-REVIEW.md  VERSIONING.md
docs/investigations/: 00-phase-0-claim-boundary.md  01-phase-1-privilege-boundary.md  02-phase-2-config-policy.md  03-phase-3-auth-tty-session.md  04-phase-4-persist-logging.md  05-phase-5-harness-negative-testing.md  06-phase-6-environment-validation.md  07-phase-7-release-soak.md  README.md
scripts/: release-preflight.sh
src/: ARCHITECTURE.md  lib.rs  main.rs
src/app/: check.rs  execute.rs  mod.rs
src/auth/: mod.rs  none.rs  pam.rs  plain.rs  prompt.rs
src/cli/: args.rs  mod.rs  mode.rs  usage.rs
src/config/: ast.rs  lexer.rs  mod.rs  parser.rs  validate.rs
src/exec/: env.rs  fds.rs  mod.rs  path.rs  privilege.rs  run.rs  shell.rs  spawn.rs
src/logging/: audit.rs  mod.rs
src/persist/: deauth.rs  mod.rs  timestamp.rs
src/platform/: groups.rs  mod.rs  passwd.rs  tty.rs
src/policy/: command.rs  decision.rs  identity.rs  matcher.rs  mod.rs  rule.rs
(+292 files in other folders)
