[package]
name = "OpenDoas-rs"
version = "1.0.0"
license = "GPL-3.0-only"
edition = "2021"

[lib]
name = "open_doas_rs"

[features]
default = ["auth-plain"]
auth-none = []
auth-plain = ["dep:rpassword", "dep:shadow"]
auth-pam = ["dep:pam-client", "dep:rpassword"]

[dependencies]
getopt = "1.1.3"
libc = "0.2.147"
nix = {version = "0.30.1", features = [
	"fs",
	"hostname",
	"process",
	"signal",
	"term",
	"user",
]}
pam-client = {version = "0.5", git = "https://github.com/TheDcoder/rust-pam-client.git", rev = "e8a406c", optional = true}
pwd-grp = "0.1.1"
rpassword = { version = "7.3.1", optional = true }
shadow = { version = "0.0.1", optional = true }
